# openAPI.yaml
@@ -28,8 +28,26 @@ paths:
               schema:
                 $ref: "#/components/schemas/ApiError"
     put:
-      operationId:  updateKonnektorHostname
-      summary: Update konnektor hostname
+      operationId:  updateKonnektor
+      summary: Update the complete konnektor
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/KonnektorDTO'
+      responses:
+        204:
+          description: Konnektors updated successfully
+        403:
+          description: Forbidden
+        404:
+          description: Konnektor not found
+        500:
+          description: Server Error
+    patch:
+      operationId: updateKonnektorHostname
+      summary: updates hostname only
       requestBody:
         required: true
         content:
@@ -38,7 +56,7 @@ paths:
               $ref: '#/components/schemas/KonnektorHostnameDTO'
       responses:
         204:
-          description: Konnektors hostname changed successfully
+          description: Konnektors updated successfully
         403:
           description: Forbidden
         404:
@@ -93,24 +111,6 @@ paths:
                   $ref: "#/components/schemas/KonnektorDTO"
         404:
           description: not konnektors found
-    put:
-      operationId: updateKonnektor
-      summary: Update the konnektors properties
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/KonnektorDTO'
-      responses:
-        204:
-          description: Konnektors data changed successfully
-        403:
-          description: Forbidden
-        404:
-          description: Konnektor not found
-        500:
-          description: Server Error
     post:
       description: creates a new konnektor
       operationId:  createKonnektor
@@ -249,7 +249,7 @@ components:
         konnektorId:
           type: integer
           format: int64
-        hostname:
+        hostName:
           type: string
         serialNumber:
           type: string
@@ -281,7 +281,7 @@ components:
       properties:
         id:
           type: integer
-        hostname:
+        hostName:
           type: string
         serialNumber:
           type: string
@@ -299,14 +299,14 @@ components:
           items:
             $ref: "#/components/schemas/AuditLogDTO"
       required:
-        - hostname
+        - hostName
     KonnektorHostnameDTO:
       type: object
       properties:
-        hostname:
+        hostName:
           type: string
       required:
-        - hostname
+        - hostName
     ErrorDTO:
       type: object
       properties:
